--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,4 +10,5 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: #f9f9f9;
+    overflow-x: hidden;
 }
